created new Barchart

--- a/tech-titan-tracker/src/Components/LineChart/LineChart.css
+++ b/tech-titan-tracker/src/Components/LineChart/LineChart.css
@@ -1,4 +1,10 @@
 svg {
-    
+
     overflow: visible;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+
+}
